Fix contrastRatio de footer

--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -14,10 +14,10 @@
   .nav{
     .nav-item{
       .nav-link{
-        color: $textLight;
+        color: rgba($textLight, .6);
       }
       .active{
-        color: $textDark;
+        color: $textLight;
         background-color: $accent;
       }
     }
